<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Trocate</string>
    <string name="action_settings">Settings</string>

    <string name="searchFilter">Search Filter</string>
    <string name="filterBinPrompt">Enter # of bins</string>
    <string name="allBins">All Bins</string>
    <string name="generalWaste">Litter Bin</string>
    <string name="recycling">Recyclable</string>
    <string name="skipBin">Skip</string>
    <string name="otherComments">Comments</string>

    <string name="addBinTxt">Add A Bin</string>
    <string name="litterBinTxt">Litter Bin</string>
    <string name="recyclingBinTxt">Recycling Bin</string>
    <string name="skipBinTxt">skip Bin</string>
    <string-array name="addBinSpinner">
        <item>Litter Bin</item>
        <item>Recycling</item>
        <item>Skip</item>
    </string-array>

    <string name="reportBinTxt">Report A Bin</string>
    <string name="fullReportTxt">Full</string>
    <string name="brokenReportTxt">Broken</string>
    <string name="missingReportTxt">Missing</string>
	<string-array name="reportBinSpinner">
	    <item>Full</item>
	    <item>Broken</item>
	    <item>Missing</item>
	</string-array>

    <string name="settingsBtn">Settings</string>
    <string name="refreshBtn">Find</string>
	<string name="applyFilterBtn">Apply</string>
	<string name="addBinBtn">Add</string>
	<string name="reportBtn">Report</string>
	<string name="backBtn">Back To Map</string>
	<color name="white">#FFFFFF</color>

</resources>